# CM4_MSL_Project

./: .gitignore  PLAN.md  README.md  install.sh  pyproject.toml  update.sh
cm4_v3link/: __init__.py  __main__.py  build_info.py  camera_backends.py  camera_service.py  config.py  healthcheck.py  logging_buffer.py  main.py  models.py  update.py
cm4_v3link/static/: app.js  styles.css
cm4_v3link/templates/: index.html
systemd/: cm4-v3link-healthcheck.service  cm4-v3link-healthcheck.timer  cm4-v3link.service
