[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cm4-v3link"
version = "0.1.6"
description = "Raspberry Pi CM4 control tool for Arducam V3Link cameras"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pillow>=10.0",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
cm4-v3link = "cm4_v3link.__main__:main"
cm4-v3link-healthcheck = "cm4_v3link.healthcheck:main"
cm4-v3link-update = "cm4_v3link.update:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cm4_v3link*"]
